# rea_lesson

./: README.md  numpy_matplotlib_tasks.py  occupancy_data.csv  pyproject.toml  task1.py  task2.py  task2_my.py  task3.py  task3_my.py  task4.py  temperature_data.csv  test2.csv  test_2.csv  Практическая работа 1.docx  Практическая работа 2_Разведочный анализ.docx
